# Library-File-System

./: AVAILSystem.cpp  AVAILSystem.h  AuthorPK.txt  Authors.txt  BookPK.txt  Books.txt  CMakeLists.txt  EntityFiles.cpp  EntityFiles.h  FilesHelper.cpp  FilesHelper.h  IFilesSystem.cpp  IFilesSystem.h  IndexHelper.cpp  IndexHelper.h  IndexSystem.h  Interface.cpp  Interface.h  LibraryInterface.cpp  LibraryInterface.h  LinkedList.cpp  LinkedList.h  PrimaryIndex.cpp  PrimaryIndex.h  QueryProcessor.cpp  QueryProcessor.h  README.md  SecondaryIndex.cpp  SecondaryIndex.h  fileIndex.txt  main.cpp  secondaryIndex.txt
